# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

# See 'chrome/android/chrome_java_resources.gni' on how to generate this list
brave_java_resources = [
  "java/res/anim/slide_in_bottom.xml",
  "java/res/anim/slide_in_top.xml",
  "java/res/anim/slide_out_bottom.xml",
  "java/res/anim/slide_out_top.xml",
  "java/res/color/crypto_wallet_radiobutton_color_selector.xml",
  "java/res/drawable-hdpi/bat_logo.png",
  "java/res/drawable-hdpi/bat_unverified.png",
  "java/res/drawable-hdpi/bat_verified.png",
  "java/res/drawable-hdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-hdpi/brave_sync.png",
  "java/res/drawable-hdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-hdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-hdpi/btn_bat.png",
  "java/res/drawable-hdpi/btn_bookmark.png",
  "java/res/drawable-hdpi/btn_bookmark_fill.png",
  "java/res/drawable-hdpi/btn_brave.png",
  "java/res/drawable-hdpi/btn_brave_off.png",
  "java/res/drawable-hdpi/btn_delete_24dp.png",
  "java/res/drawable-hdpi/btn_info.png",
  "java/res/drawable-hdpi/btn_left.png",
  "java/res/drawable-hdpi/btn_mic.png",
  "java/res/drawable-hdpi/btn_right.png",
  "java/res/drawable-hdpi/btn_right_tablet.png",
  "java/res/drawable-hdpi/btn_star.png",
  "java/res/drawable-hdpi/btn_star_filled.png",
  "java/res/drawable-hdpi/btn_suggestion_refine.png",
  "java/res/drawable-hdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-hdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-hdpi/btn_toolbar_home.png",
  "java/res/drawable-hdpi/btn_toolbar_reload.png",
  "java/res/drawable-hdpi/buy_send_swap.png",
  "java/res/drawable-hdpi/camera.png",
  "java/res/drawable-hdpi/check.png",
  "java/res/drawable-hdpi/checkbox.png",
  "java/res/drawable-hdpi/chevron_right.png",
  "java/res/drawable-hdpi/chromelogo16.png",
  "java/res/drawable-hdpi/coin_stack.png",
  "java/res/drawable-hdpi/coins.png",
  "java/res/drawable-hdpi/copy_paste.png",
  "java/res/drawable-hdpi/daum.png",
  "java/res/drawable-hdpi/down_arrow.png",
  "java/res/drawable-hdpi/ecosia.png",
  "java/res/drawable-hdpi/group.png",
  "java/res/drawable-hdpi/ic_ad_free_videos.png",
  "java/res/drawable-hdpi/ic_brave_onboarding.png",
  "java/res/drawable-hdpi/ic_chrome.png",
  "java/res/drawable-hdpi/ic_cookie.png",
  "java/res/drawable-hdpi/ic_cookie_background.png",
  "java/res/drawable-hdpi/ic_cross_modal.png",
  "java/res/drawable-hdpi/ic_delete_white_24dp.png",
  "java/res/drawable-hdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-hdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-hdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-hdpi/ic_onboarding_bg.png",
  "java/res/drawable-hdpi/ic_onboarding_bottom_leaf.png",
  "java/res/drawable-hdpi/ic_onboarding_top_leaf.png",
  "java/res/drawable-hdpi/icn_frowning_face.png",
  "java/res/drawable-hdpi/icon_validated_notification.png",
  "java/res/drawable-hdpi/incognito_simple.png",
  "java/res/drawable-hdpi/incognito_splash.png",
  "java/res/drawable-hdpi/location_bar_incognito_badge.png",
  "java/res/drawable-hdpi/modern_location_bar.9.png",
  "java/res/drawable-hdpi/naver.png",
  "java/res/drawable-hdpi/omnibox_https_valid.png",
  "java/res/drawable-hdpi/pending_tx_placeholder.png",
  "java/res/drawable-hdpi/plus.png",
  "java/res/drawable-hdpi/search_engine_bing.png",
  "java/res/drawable-hdpi/search_engine_brave.png",
  "java/res/drawable-hdpi/search_engine_duckduckgo.png",
  "java/res/drawable-hdpi/search_engine_google.png",
  "java/res/drawable-hdpi/search_engine_qwant.png",
  "java/res/drawable-hdpi/search_engine_startpage.png",
  "java/res/drawable-hdpi/settings_desktop_mode.png",
  "java/res/drawable-hdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-hdpi/share_activity_background.png",
  "java/res/drawable-hdpi/share_icon.png",
  "java/res/drawable-hdpi/shortcut_incognito.png",
  "java/res/drawable-hdpi/uphold_green.png",
  "java/res/drawable-hdpi/uphold_white.png",
  "java/res/drawable-hdpi/verified_creator_large.png",
  "java/res/drawable-hdpi/yandex.png",
  "java/res/drawable-mdpi/bat_logo.png",
  "java/res/drawable-mdpi/bat_unverified.png",
  "java/res/drawable-mdpi/bat_verified.png",
  "java/res/drawable-mdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-mdpi/brave_sync.png",
  "java/res/drawable-mdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-mdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-mdpi/btn_bat.png",
  "java/res/drawable-mdpi/btn_bookmark.png",
  "java/res/drawable-mdpi/btn_bookmark_fill.png",
  "java/res/drawable-mdpi/btn_brave.png",
  "java/res/drawable-mdpi/btn_brave_off.png",
  "java/res/drawable-mdpi/btn_delete_24dp.png",
  "java/res/drawable-mdpi/btn_info.png",
  "java/res/drawable-mdpi/btn_left.png",
  "java/res/drawable-mdpi/btn_mic.png",
  "java/res/drawable-mdpi/btn_right.png",
  "java/res/drawable-mdpi/btn_right_tablet.png",
  "java/res/drawable-mdpi/btn_star.png",
  "java/res/drawable-mdpi/btn_star_filled.png",
  "java/res/drawable-mdpi/btn_suggestion_refine.png",
  "java/res/drawable-mdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-mdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-mdpi/btn_toolbar_home.png",
  "java/res/drawable-mdpi/btn_toolbar_reload.png",
  "java/res/drawable-mdpi/buy_send_swap.png",
  "java/res/drawable-mdpi/camera.png",
  "java/res/drawable-mdpi/check.png",
  "java/res/drawable-mdpi/checkbox.png",
  "java/res/drawable-mdpi/chevron_right.png",
  "java/res/drawable-mdpi/chromelogo16.png",
  "java/res/drawable-mdpi/coin_stack.png",
  "java/res/drawable-mdpi/coins.png",
  "java/res/drawable-mdpi/copy_paste.png",
  "java/res/drawable-mdpi/daum.png",
  "java/res/drawable-mdpi/down_arrow.png",
  "java/res/drawable-mdpi/ecosia.png",
  "java/res/drawable-mdpi/group.png",
  "java/res/drawable-mdpi/ic_ad_free_videos.png",
  "java/res/drawable-mdpi/ic_brave_onboarding.png",
  "java/res/drawable-mdpi/ic_chrome.png",
  "java/res/drawable-mdpi/ic_cookie.png",
  "java/res/drawable-mdpi/ic_cookie_background.png",
  "java/res/drawable-mdpi/ic_cross_modal.png",
  "java/res/drawable-mdpi/ic_delete_white_24dp.png",
  "java/res/drawable-mdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-mdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-mdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-mdpi/ic_onboarding_bg.png",
  "java/res/drawable-mdpi/ic_onboarding_bottom_leaf.png",
  "java/res/drawable-mdpi/ic_onboarding_top_leaf.png",
  "java/res/drawable-mdpi/icn_frowning_face.png",
  "java/res/drawable-mdpi/icon_validated_notification.png",
  "java/res/drawable-mdpi/incognito_simple.png",
  "java/res/drawable-mdpi/incognito_splash.png",
  "java/res/drawable-mdpi/location_bar_incognito_badge.png",
  "java/res/drawable-mdpi/modern_location_bar.9.png",
  "java/res/drawable-mdpi/naver.png",
  "java/res/drawable-mdpi/omnibox_https_valid.png",
  "java/res/drawable-mdpi/pending_tx_placeholder.png",
  "java/res/drawable-mdpi/plus.png",
  "java/res/drawable-mdpi/search_engine_bing.png",
  "java/res/drawable-mdpi/search_engine_brave.png",
  "java/res/drawable-mdpi/search_engine_duckduckgo.png",
  "java/res/drawable-mdpi/search_engine_google.png",
  "java/res/drawable-mdpi/search_engine_qwant.png",
  "java/res/drawable-mdpi/search_engine_startpage.png",
  "java/res/drawable-mdpi/settings_desktop_mode.png",
  "java/res/drawable-mdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-mdpi/share_activity_background.png",
  "java/res/drawable-mdpi/share_icon.png",
  "java/res/drawable-mdpi/shortcut_incognito.png",
  "java/res/drawable-mdpi/uphold_green.png",
  "java/res/drawable-mdpi/uphold_white.png",
  "java/res/drawable-mdpi/verified_creator_large.png",
  "java/res/drawable-mdpi/yandex.png",
  "java/res/drawable-night-hdpi/ic_cookie_background.png",
  "java/res/drawable-night-mdpi/ic_cookie_background.png",
  "java/res/drawable-night-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
  "java/res/drawable-night-nodpi/widget_preview.png",
  "java/res/drawable-night-xhdpi/ic_cookie_background.png",
  "java/res/drawable-night-xxhdpi/ic_cookie_background.png",
  "java/res/drawable-night-xxxhdpi/ic_cookie_background.png",
  "java/res/drawable-nodpi/dylan_malval_sea_min.webp",
  "java/res/drawable-nodpi/eth.png",
  "java/res/drawable-nodpi/fee_icon.png",
  "java/res/drawable-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
  "java/res/drawable-nodpi/loader0.png",
  "java/res/drawable-nodpi/loader0_orange.png",
  "java/res/drawable-xhdpi/bat_logo.png",
  "java/res/drawable-xhdpi/bat_unverified.png",
  "java/res/drawable-xhdpi/bat_verified.png",
  "java/res/drawable-xhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xhdpi/brave_sync.png",
  "java/res/drawable-xhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xhdpi/btn_bat.png",
  "java/res/drawable-xhdpi/btn_bookmark.png",
  "java/res/drawable-xhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xhdpi/btn_brave.png",
  "java/res/drawable-xhdpi/btn_brave_off.png",
  "java/res/drawable-xhdpi/btn_delete_24dp.png",
  "java/res/drawable-xhdpi/btn_info.png",
  "java/res/drawable-xhdpi/btn_left.png",
  "java/res/drawable-xhdpi/btn_mic.png",
  "java/res/drawable-xhdpi/btn_right.png",
  "java/res/drawable-xhdpi/btn_right_tablet.png",
  "java/res/drawable-xhdpi/btn_star.png",
  "java/res/drawable-xhdpi/btn_star_filled.png",
  "java/res/drawable-xhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xhdpi/btn_toolbar_home.png",
  "java/res/drawable-xhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xhdpi/buy_send_swap.png",
  "java/res/drawable-xhdpi/camera.png",
  "java/res/drawable-xhdpi/check.png",
  "java/res/drawable-xhdpi/checkbox.png",
  "java/res/drawable-xhdpi/chevron_right.png",
  "java/res/drawable-xhdpi/chromelogo16.png",
  "java/res/drawable-xhdpi/coin_stack.png",
  "java/res/drawable-xhdpi/coins.png",
  "java/res/drawable-xhdpi/copy_paste.png",
  "java/res/drawable-xhdpi/daum.png",
  "java/res/drawable-xhdpi/down_arrow.png",
  "java/res/drawable-xhdpi/ecosia.png",
  "java/res/drawable-xhdpi/group.png",
  "java/res/drawable-xhdpi/ic_ad_free_videos.png",
  "java/res/drawable-xhdpi/ic_brave_onboarding.png",
  "java/res/drawable-xhdpi/ic_chrome.png",
  "java/res/drawable-xhdpi/ic_cookie.png",
  "java/res/drawable-xhdpi/ic_cookie_background.png",
  "java/res/drawable-xhdpi/ic_cross_modal.png",
  "java/res/drawable-xhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xhdpi/ic_onboarding_bg.png",
  "java/res/drawable-xhdpi/ic_onboarding_bottom_leaf.png",
  "java/res/drawable-xhdpi/ic_onboarding_top_leaf.png",
  "java/res/drawable-xhdpi/icn_frowning_face.png",
  "java/res/drawable-xhdpi/icon_validated_notification.png",
  "java/res/drawable-xhdpi/incognito_simple.png",
  "java/res/drawable-xhdpi/incognito_splash.png",
  "java/res/drawable-xhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xhdpi/modern_location_bar.9.png",
  "java/res/drawable-xhdpi/naver.png",
  "java/res/drawable-xhdpi/omnibox_https_valid.png",
  "java/res/drawable-xhdpi/pending_tx_placeholder.png",
  "java/res/drawable-xhdpi/plus.png",
  "java/res/drawable-xhdpi/search_engine_bing.png",
  "java/res/drawable-xhdpi/search_engine_brave.png",
  "java/res/drawable-xhdpi/search_engine_duckduckgo.png",
  "java/res/drawable-xhdpi/search_engine_google.png",
  "java/res/drawable-xhdpi/search_engine_qwant.png",
  "java/res/drawable-xhdpi/search_engine_startpage.png",
  "java/res/drawable-xhdpi/settings_desktop_mode.png",
  "java/res/drawable-xhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xhdpi/share_activity_background.png",
  "java/res/drawable-xhdpi/share_icon.png",
  "java/res/drawable-xhdpi/shortcut_incognito.png",
  "java/res/drawable-xhdpi/uphold_green.png",
  "java/res/drawable-xhdpi/uphold_white.png",
  "java/res/drawable-xhdpi/verified_creator_large.png",
  "java/res/drawable-xhdpi/yandex.png",
  "java/res/drawable-xxhdpi/bat_logo.png",
  "java/res/drawable-xxhdpi/bat_unverified.png",
  "java/res/drawable-xxhdpi/bat_verified.png",
  "java/res/drawable-xxhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xxhdpi/brave_sync.png",
  "java/res/drawable-xxhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xxhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xxhdpi/btn_bat.png",
  "java/res/drawable-xxhdpi/btn_bookmark.png",
  "java/res/drawable-xxhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xxhdpi/btn_brave.png",
  "java/res/drawable-xxhdpi/btn_brave_off.png",
  "java/res/drawable-xxhdpi/btn_delete_24dp.png",
  "java/res/drawable-xxhdpi/btn_info.png",
  "java/res/drawable-xxhdpi/btn_left.png",
  "java/res/drawable-xxhdpi/btn_mic.png",
  "java/res/drawable-xxhdpi/btn_right.png",
  "java/res/drawable-xxhdpi/btn_right_tablet.png",
  "java/res/drawable-xxhdpi/btn_star.png",
  "java/res/drawable-xxhdpi/btn_star_filled.png",
  "java/res/drawable-xxhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xxhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xxhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xxhdpi/btn_toolbar_home.png",
  "java/res/drawable-xxhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xxhdpi/buy_send_swap.png",
  "java/res/drawable-xxhdpi/camera.png",
  "java/res/drawable-xxhdpi/check.png",
  "java/res/drawable-xxhdpi/checkbox.png",
  "java/res/drawable-xxhdpi/chevron_right.png",
  "java/res/drawable-xxhdpi/chromelogo16.png",
  "java/res/drawable-xxhdpi/coin_stack.png",
  "java/res/drawable-xxhdpi/coins.png",
  "java/res/drawable-xxhdpi/copy_paste.png",
  "java/res/drawable-xxhdpi/daum.png",
  "java/res/drawable-xxhdpi/ecosia.png",
  "java/res/drawable-xxhdpi/group.png",
  "java/res/drawable-xxhdpi/ic_ad_free_videos.png",
  "java/res/drawable-xxhdpi/ic_brave_onboarding.png",
  "java/res/drawable-xxhdpi/ic_chrome.png",
  "java/res/drawable-xxhdpi/ic_cookie.png",
  "java/res/drawable-xxhdpi/ic_cookie_background.png",
  "java/res/drawable-xxhdpi/ic_cross_modal.png",
  "java/res/drawable-xxhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xxhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xxhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xxhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xxhdpi/ic_onboarding_bg.png",
  "java/res/drawable-xxhdpi/ic_onboarding_bottom_leaf.png",
  "java/res/drawable-xxhdpi/ic_onboarding_top_leaf.png",
  "java/res/drawable-xxhdpi/icn_frowning_face.png",
  "java/res/drawable-xxhdpi/icon_validated_notification.png",
  "java/res/drawable-xxhdpi/incognito_simple.png",
  "java/res/drawable-xxhdpi/incognito_splash.png",
  "java/res/drawable-xxhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xxhdpi/modern_location_bar.9.png",
  "java/res/drawable-xxhdpi/naver.png",
  "java/res/drawable-xxhdpi/omnibox_https_valid.png",
  "java/res/drawable-xxhdpi/pending_tx_placeholder.png",
  "java/res/drawable-xxhdpi/plus.png",
  "java/res/drawable-xxhdpi/search_engine_bing.png",
  "java/res/drawable-xxhdpi/search_engine_brave.png",
  "java/res/drawable-xxhdpi/search_engine_duckduckgo.png",
  "java/res/drawable-xxhdpi/search_engine_google.png",
  "java/res/drawable-xxhdpi/search_engine_qwant.png",
  "java/res/drawable-xxhdpi/search_engine_startpage.png",
  "java/res/drawable-xxhdpi/settings_desktop_mode.png",
  "java/res/drawable-xxhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xxhdpi/share_activity_background.png",
  "java/res/drawable-xxhdpi/share_icon.png",
  "java/res/drawable-xxhdpi/shortcut_incognito.png",
  "java/res/drawable-xxhdpi/uphold_green.png",
  "java/res/drawable-xxhdpi/uphold_white.png",
  "java/res/drawable-xxhdpi/verified_creator_large.png",
  "java/res/drawable-xxhdpi/yandex.png",
  "java/res/drawable-xxxhdpi/bat_logo.png",
  "java/res/drawable-xxxhdpi/bat_unverified.png",
  "java/res/drawable-xxxhdpi/bat_verified.png",
  "java/res/drawable-xxxhdpi/brave_ads_launch_graphic.png",
  "java/res/drawable-xxxhdpi/brave_sync.png",
  "java/res/drawable-xxxhdpi/brave_sync_btn_laptop.png",
  "java/res/drawable-xxxhdpi/brave_sync_btn_mobile.png",
  "java/res/drawable-xxxhdpi/btn_bat.png",
  "java/res/drawable-xxxhdpi/btn_bookmark.png",
  "java/res/drawable-xxxhdpi/btn_bookmark_fill.png",
  "java/res/drawable-xxxhdpi/btn_brave.png",
  "java/res/drawable-xxxhdpi/btn_brave_off.png",
  "java/res/drawable-xxxhdpi/btn_delete_24dp.png",
  "java/res/drawable-xxxhdpi/btn_info.png",
  "java/res/drawable-xxxhdpi/btn_left.png",
  "java/res/drawable-xxxhdpi/btn_mic.png",
  "java/res/drawable-xxxhdpi/btn_right.png",
  "java/res/drawable-xxxhdpi/btn_right_tablet.png",
  "java/res/drawable-xxxhdpi/btn_star.png",
  "java/res/drawable-xxxhdpi/btn_star_filled.png",
  "java/res/drawable-xxxhdpi/btn_suggestion_refine.png",
  "java/res/drawable-xxxhdpi/btn_tabstrip_switch_normal.png",
  "java/res/drawable-xxxhdpi/btn_tabswitcher_modern.png",
  "java/res/drawable-xxxhdpi/btn_toolbar_home.png",
  "java/res/drawable-xxxhdpi/btn_toolbar_reload.png",
  "java/res/drawable-xxxhdpi/buy_send_swap.png",
  "java/res/drawable-xxxhdpi/camera.png",
  "java/res/drawable-xxxhdpi/check.png",
  "java/res/drawable-xxxhdpi/checkbox.png",
  "java/res/drawable-xxxhdpi/chromelogo16.png",
  "java/res/drawable-xxxhdpi/coin_stack.png",
  "java/res/drawable-xxxhdpi/coins.png",
  "java/res/drawable-xxxhdpi/copy_paste.png",
  "java/res/drawable-xxxhdpi/daum.png",
  "java/res/drawable-xxxhdpi/ecosia.png",
  "java/res/drawable-xxxhdpi/group.png",
  "java/res/drawable-xxxhdpi/ic_ad_free_videos.png",
  "java/res/drawable-xxxhdpi/ic_brave_onboarding.png",
  "java/res/drawable-xxxhdpi/ic_chrome.png",
  "java/res/drawable-xxxhdpi/ic_cookie.png",
  "java/res/drawable-xxxhdpi/ic_cookie_background.png",
  "java/res/drawable-xxxhdpi/ic_cross_modal.png",
  "java/res/drawable-xxxhdpi/ic_delete_white_24dp.png",
  "java/res/drawable-xxxhdpi/ic_expand_less_black_24dp.png",
  "java/res/drawable-xxxhdpi/ic_expand_more_black_24dp.png",
  "java/res/drawable-xxxhdpi/ic_file_download_white_24dp.png",
  "java/res/drawable-xxxhdpi/ic_onboarding_bg.png",
  "java/res/drawable-xxxhdpi/ic_onboarding_bottom_leaf.png",
  "java/res/drawable-xxxhdpi/ic_onboarding_top_leaf.png",
  "java/res/drawable-xxxhdpi/icn_frowning_face.png",
  "java/res/drawable-xxxhdpi/icon_validated_notification.png",
  "java/res/drawable-xxxhdpi/incognito_simple.png",
  "java/res/drawable-xxxhdpi/incognito_splash.png",
  "java/res/drawable-xxxhdpi/location_bar_incognito_badge.png",
  "java/res/drawable-xxxhdpi/naver.png",
  "java/res/drawable-xxxhdpi/omnibox_https_valid.png",
  "java/res/drawable-xxxhdpi/pending_tx_placeholder.png",
  "java/res/drawable-xxxhdpi/plus.png",
  "java/res/drawable-xxxhdpi/search_engine_brave.png",
  "java/res/drawable-xxxhdpi/search_engine_startpage.png",
  "java/res/drawable-xxxhdpi/settings_desktop_mode.png",
  "java/res/drawable-xxxhdpi/settings_play_yt_video_in_browser.png",
  "java/res/drawable-xxxhdpi/share_activity_background.png",
  "java/res/drawable-xxxhdpi/share_icon.png",
  "java/res/drawable-xxxhdpi/shortcut_incognito.png",
  "java/res/drawable-xxxhdpi/uphold_green.png",
  "java/res/drawable-xxxhdpi/uphold_white.png",
  "java/res/drawable-xxxhdpi/verified_creator_large.png",
  "java/res/drawable-xxxhdpi/yandex.png",
  "java/res/drawable/ad_free_card_bg.xml",
  "java/res/drawable/add_widget_button.xml",
  "java/res/drawable/ads_custom_notification_border.xml",
  "java/res/drawable/ads_custom_notification_border_dark.xml",
  "java/res/drawable/bat_ads_logo_button.xml",
  "java/res/drawable/bat_funds_selector.xml",
  "java/res/drawable/bat_panel_gradient.xml",
  "java/res/drawable/bat_value_text_selector.xml",
  "java/res/drawable/blue_48_rounded_bg.xml",
  "java/res/drawable/blue_rounded_button.xml",
  "java/res/drawable/blue_rounded_notification_bg.xml",
  "java/res/drawable/bookmark_menu_bg.xml",
  "java/res/drawable/brave_badge_rewards_background_large.xml",
  "java/res/drawable/brave_badge_rewards_background_small.xml",
  "java/res/drawable/brave_badge_shields_background_large.xml",
  "java/res/drawable/brave_badge_shields_background_small.xml",
  "java/res/drawable/brave_checkbox.xml",
  "java/res/drawable/brave_menu_bookmarks.xml",
  "java/res/drawable/brave_menu_downloads.xml",
  "java/res/drawable/brave_menu_exit.xml",
  "java/res/drawable/brave_menu_history.xml",
  "java/res/drawable/brave_menu_new_private_tab.xml",
  "java/res/drawable/brave_menu_recent_tabs.xml",
  "java/res/drawable/brave_menu_rewards.xml",
  "java/res/drawable/brave_menu_set_as_default.xml",
  "java/res/drawable/brave_menu_settings.xml",
  "java/res/drawable/brave_modern_toolbar_text_box_background.xml",
  "java/res/drawable/brave_new_group_tab.xml",
  "java/res/drawable/brave_news_settings_list_divider.xml",
  "java/res/drawable/brave_news_settings_publisher_bg.xml",
  "java/res/drawable/brave_news_settings_search_bg.xml",
  "java/res/drawable/brave_notification_permission_rationale_dialog_header.xml",
  "java/res/drawable/brave_rating_emoji_bg.xml",
  "java/res/drawable/brave_rating_rate_now_bg.xml",
  "java/res/drawable/brave_reward_radio_button_selector.xml",
  "java/res/drawable/brave_rewards_circle.xml",
  "java/res/drawable/brave_rewards_onboarding_default.xml",
  "java/res/drawable/brave_rewards_onboarding_selected.xml",
  "java/res/drawable/brave_rewards_onboarding_selector.xml",
  "java/res/drawable/brave_rewards_rectangle.xml",
  "java/res/drawable/brave_rewards_warning_text_background.xml",
  "java/res/drawable/brave_shields_tooltip_text_bg.xml",
  "java/res/drawable/brave_stats_radio_button_normal.xml",
  "java/res/drawable/brave_stats_radio_button_selected.xml",
  "java/res/drawable/brave_stats_radio_button_selector.xml",
  "java/res/drawable/brave_stats_radio_group_bg.xml",
  "java/res/drawable/brave_stats_rounded_bg.xml",
  "java/res/drawable/brave_stats_ui_empty_bg.xml",
  "java/res/drawable/brave_sync_btn.xml",
  "java/res/drawable/brave_sync_cover_general.xml",
  "java/res/drawable/brave_sync_image_btn.xml",
  "java/res/drawable/brave_sync_qr_rounded.xml",
  "java/res/drawable/brave_sync_toggle_off_btn_left.xml",
  "java/res/drawable/brave_sync_toggle_off_btn_right.xml",
  "java/res/drawable/brave_sync_toggle_on_btn_left.xml",
  "java/res/drawable/brave_sync_toggle_on_btn_right.xml",
  "java/res/drawable/brave_sync_top_rounded.xml",
  "java/res/drawable/brave_sync_warning.xml",
  "java/res/drawable/card_bg.xml",
  "java/res/drawable/checked_circle_filled.xml",
  "java/res/drawable/circular_progress.xml",
  "java/res/drawable/cookie_consent_tooltip_background.xml",
  "java/res/drawable/country_spinner_background.xml",
  "java/res/drawable/creator_background.xml",
  "java/res/drawable/crypto_wallet_blue_button.xml",
  "java/res/drawable/crypto_wallet_hollow_button.xml",
  "java/res/drawable/custom_tip_cancel_selector.xml",
  "java/res/drawable/default_dot.xml",
  "java/res/drawable/default_indicator.xml",
  "java/res/drawable/edittext_boarder_selector.xml",
  "java/res/drawable/ic_ac_onboarding.xml",
  "java/res/drawable/ic_accessibility.xml",
  "java/res/drawable/ic_add.xml",
  "java/res/drawable/ic_addresses.xml",
  "java/res/drawable/ic_always_on_info.xml",
  "java/res/drawable/ic_appearance.xml",
  "java/res/drawable/ic_arrow_back.xml",
  "java/res/drawable/ic_arrow_circle_right.xml",
  "java/res/drawable/ic_arrow_clock.xml",
  "java/res/drawable/ic_arrow_down.xml",
  "java/res/drawable/ic_arrow_down_circular_day_night.xml",
  "java/res/drawable/ic_arrow_down_circular_filled.xml",
  "java/res/drawable/ic_arrow_down_circular_filled_transparent.xml",
  "java/res/drawable/ic_arrow_downward.xml",
  "java/res/drawable/ic_arrow_drop_down_white.xml",
  "java/res/drawable/ic_arrow_forward.xml",
  "java/res/drawable/ic_arrow_left_right_directions.xml",
  "java/res/drawable/ic_back.xml",
  "java/res/drawable/ic_bar_chart_20.xml",
  "java/res/drawable/ic_baseline_add_24.xml",
  "java/res/drawable/ic_baseline_arrow_back_24.xml",
  "java/res/drawable/ic_baseline_close_24.xml",
  "java/res/drawable/ic_baseline_more_vert_24.xml",
  "java/res/drawable/ic_basic_check.xml",
  "java/res/drawable/ic_bat_logo.xml",
  "java/res/drawable/ic_bat_unverified_off.xml",
  "java/res/drawable/ic_bell_icon.xml",
  "java/res/drawable/ic_bg.xml",
  "java/res/drawable/ic_bg_video_playback.xml",
  "java/res/drawable/ic_bookmark_menu_add.xml",
  "java/res/drawable/ic_bookmark_menu_delete.xml",
  "java/res/drawable/ic_bookmark_menu_edit.xml",
  "java/res/drawable/ic_bookmark_menu_view.xml",
  "java/res/drawable/ic_brave.xml",
  "java/res/drawable/ic_brave_36.xml",
  "java/res/drawable/ic_brave_battery.xml",
  "java/res/drawable/ic_brave_logo.xml",
  "java/res/drawable/ic_brave_mobiledata.xml",
  "java/res/drawable/ic_brave_notification.xml",
  "java/res/drawable/ic_brave_smiley_happy.xml",
  "java/res/drawable/ic_brave_smiley_sad.xml",
  "java/res/drawable/ic_brave_vpn_graphic.xml",
  "java/res/drawable/ic_calendar.xml",
  "java/res/drawable/ic_calendar_icon.xml",
  "java/res/drawable/ic_carat_down.xml",
  "java/res/drawable/ic_carat_down_country_spinner.xml",
  "java/res/drawable/ic_card_background.xml",
  "java/res/drawable/ic_channel_brave.xml",
  "java/res/drawable/ic_channel_business.xml",
  "java/res/drawable/ic_channel_cars.xml",
  "java/res/drawable/ic_channel_crypto.xml",
  "java/res/drawable/ic_channel_culture.xml",
  "java/res/drawable/ic_channel_default.xml",
  "java/res/drawable/ic_channel_entertainment.xml",
  "java/res/drawable/ic_channel_fashion.xml",
  "java/res/drawable/ic_channel_filmtv.xml",
  "java/res/drawable/ic_channel_food.xml",
  "java/res/drawable/ic_channel_fun.xml",
  "java/res/drawable/ic_channel_gaming.xml",
  "java/res/drawable/ic_channel_health.xml",
  "java/res/drawable/ic_channel_home.xml",
  "java/res/drawable/ic_channel_music.xml",
  "java/res/drawable/ic_channel_politics.xml",
  "java/res/drawable/ic_channel_science.xml",
  "java/res/drawable/ic_channel_sports.xml",
  "java/res/drawable/ic_channel_tech_reviews.xml",
  "java/res/drawable/ic_channel_technology.xml",
  "java/res/drawable/ic_channel_top_news.xml",
  "java/res/drawable/ic_channel_travel.xml",
  "java/res/drawable/ic_channel_us_news.xml",
  "java/res/drawable/ic_channel_weather.xml",
  "java/res/drawable/ic_channel_world_news.xml",
  "java/res/drawable/ic_channels.xml",
  "java/res/drawable/ic_check.xml",
  "java/res/drawable/ic_check_white.xml",
  "java/res/drawable/ic_checkbox_filled.xml",
  "java/res/drawable/ic_checkbox_outline.xml",
  "java/res/drawable/ic_chevron_right.xml",
  "java/res/drawable/ic_circle_down.xml",
  "java/res/drawable/ic_circle_news_settings.xml",
  "java/res/drawable/ic_clock.xml",
  "java/res/drawable/ic_close.xml",
  "java/res/drawable/ic_close_12.xml",
  "java/res/drawable/ic_closing_all_closes_brave.xml",
  "java/res/drawable/ic_connect_account.xml",
  "java/res/drawable/ic_copy.xml",
  "java/res/drawable/ic_cross.xml",
  "java/res/drawable/ic_crypto_wallets.xml",
  "java/res/drawable/ic_custom_tabs.xml",
  "java/res/drawable/ic_discount.xml",
  "java/res/drawable/ic_down_icon.xml",
  "java/res/drawable/ic_downloads.xml",
  "java/res/drawable/ic_edit.xml",
  "java/res/drawable/ic_embellishments.xml",
  "java/res/drawable/ic_eth.xml",
  "java/res/drawable/ic_eth_24.xml",
  "java/res/drawable/ic_exchange_button.xml",
  "java/res/drawable/ic_expand_arrows.xml",
  "java/res/drawable/ic_fingerprint.xml",
  "java/res/drawable/ic_following.xml",
  "java/res/drawable/ic_gemini_logo_cyan.xml",
  "java/res/drawable/ic_gemini_logo_white.xml",
  "java/res/drawable/ic_github.xml",
  "java/res/drawable/ic_globe_connect_icon.xml",
  "java/res/drawable/ic_guardian.xml",
  "java/res/drawable/ic_hearts.xml",
  "java/res/drawable/ic_help.xml",
  "java/res/drawable/ic_help_filled.xml",
  "java/res/drawable/ic_home_screen_widget.xml",
  "java/res/drawable/ic_homepage.xml",
  "java/res/drawable/ic_info.xml",
  "java/res/drawable/ic_info_rewards.xml",
  "java/res/drawable/ic_key.xml",
  "java/res/drawable/ic_languages.xml",
  "java/res/drawable/ic_location.xml",
  "java/res/drawable/ic_logo_bitflyer.xml",
  "java/res/drawable/ic_logo_bitflyer_colored.xml",
  "java/res/drawable/ic_mask.xml",
  "java/res/drawable/ic_menu.xml",
  "java/res/drawable/ic_new_tab_page.xml",
  "java/res/drawable/ic_news.xml",
  "java/res/drawable/ic_news_settings.xml",
  "java/res/drawable/ic_notification.xml",
  "java/res/drawable/ic_notification_auto_contribute.xml",
  "java/res/drawable/ic_notification_claim.xml",
  "java/res/drawable/ic_notification_error.xml",
  "java/res/drawable/ic_notification_icon.xml",
  "java/res/drawable/ic_notification_pending.xml",
  "java/res/drawable/ic_onboarding_arrow_down.xml",
  "java/res/drawable/ic_onboarding_backup.xml",
  "java/res/drawable/ic_onboarding_backup_dark.xml",
  "java/res/drawable/ic_onboarding_graphic_android_brave_ads.xml",
  "java/res/drawable/ic_onboarding_graphic_auto_contribute.xml",
  "java/res/drawable/ic_onboarding_graphic_bat_ecosystem.xml",
  "java/res/drawable/ic_onboarding_graphic_completed.xml",
  "java/res/drawable/ic_onboarding_graphic_tipping.xml",
  "java/res/drawable/ic_onboarding_intro.xml",
  "java/res/drawable/ic_onboarding_intro_dark.xml",
  "java/res/drawable/ic_onboarding_password.xml",
  "java/res/drawable/ic_onboarding_password_dark.xml",
  "java/res/drawable/ic_open_in_new.xml",
  "java/res/drawable/ic_p3a_checkbox.xml",
  "java/res/drawable/ic_p3a_checkbox_filled.xml",
  "java/res/drawable/ic_p3a_checkbox_outline.xml",
  "java/res/drawable/ic_password.xml",
  "java/res/drawable/ic_payment_methods.xml",
  "java/res/drawable/ic_pending_tx_notification_bg.xml",
  "java/res/drawable/ic_pending_tx_notification_icon.xml",
  "java/res/drawable/ic_phone.xml",
  "java/res/drawable/ic_plans.xml",
  "java/res/drawable/ic_plus.xml",
  "java/res/drawable/ic_plus_add_widget.xml",
  "java/res/drawable/ic_popular_sources.xml",
  "java/res/drawable/ic_privacy_reports.xml",
  "java/res/drawable/ic_promoted.xml",
  "java/res/drawable/ic_qr_code.xml",
  "java/res/drawable/ic_qr_code_18.xml",
  "java/res/drawable/ic_rate.xml",
  "java/res/drawable/ic_reddit.xml",
  "java/res/drawable/ic_refresh.xml",
  "java/res/drawable/ic_refresh_20.xml",
  "java/res/drawable/ic_reward_drop_down.xml",
  "java/res/drawable/ic_rewards.xml",
  "java/res/drawable/ic_rocket.xml",
  "java/res/drawable/ic_safe.xml",
  "java/res/drawable/ic_search.xml",
  "java/res/drawable/ic_search_21dp.xml",
  "java/res/drawable/ic_search_vector.xml",
  "java/res/drawable/ic_search_widget_promotion_icon.xml",
  "java/res/drawable/ic_send_tip.xml",
  "java/res/drawable/ic_server_selection_check.xml",
  "java/res/drawable/ic_settings.xml",
  "java/res/drawable/ic_settings_dapps.xml",
  "java/res/drawable/ic_share.xml",
  "java/res/drawable/ic_shield_done_filled.xml",
  "java/res/drawable/ic_shield_done_outlined.xml",
  "java/res/drawable/ic_site_settings.xml",
  "java/res/drawable/ic_sol_asset_icon.xml",
  "java/res/drawable/ic_stats_notification_background.xml",
  "java/res/drawable/ic_suggestions.xml",
  "java/res/drawable/ic_swap_bg.xml",
  "java/res/drawable/ic_swap_icon.xml",
  "java/res/drawable/ic_sync.xml",
  "java/res/drawable/ic_thank_you.xml",
  "java/res/drawable/ic_tipping_error.xml",
  "java/res/drawable/ic_toggle_down.xml",
  "java/res/drawable/ic_toggle_up.xml",
  "java/res/drawable/ic_trash_icon.xml",
  "java/res/drawable/ic_twitch.xml",
  "java/res/drawable/ic_twitter.xml",
  "java/res/drawable/ic_twitter_logo_white.xml",
  "java/res/drawable/ic_unverified_state.xml",
  "java/res/drawable/ic_up_icon.xml",
  "java/res/drawable/ic_verify_wallet_arrow.xml",
  "java/res/drawable/ic_vimeo.xml",
  "java/res/drawable/ic_visibility_off.xml",
  "java/res/drawable/ic_vpn.xml",
  "java/res/drawable/ic_vpn_promo.xml",
  "java/res/drawable/ic_vpn_shield.xml",
  "java/res/drawable/ic_wallet_lock.xml",
  "java/res/drawable/ic_wallet_settings.xml",
  "java/res/drawable/ic_warning.xml",
  "java/res/drawable/ic_warning_circle.xml",
  "java/res/drawable/ic_warning_circle_filled.xml",
  "java/res/drawable/ic_warning_red.xml",
  "java/res/drawable/ic_warning_triangle_outline.xml",
  "java/res/drawable/ic_web.xml",
  "java/res/drawable/ic_youtube.xml",
  "java/res/drawable/image_credit_rounded_shape.xml",
  "java/res/drawable/modern_toolbar_background_grey_end_segment.xml",
  "java/res/drawable/modern_toolbar_background_grey_middle_segment.xml",
  "java/res/drawable/monthly_selector.xml",
  "java/res/drawable/news_button_bg.xml",
  "java/res/drawable/news_settings_following_count_bg.xml",
  "java/res/drawable/notification_button_rounded_bg.xml",
  "java/res/drawable/notification_on_button_background.xml",
  "java/res/drawable/notification_rationale_dialog_background.xml",
  "java/res/drawable/orange_rounded_button.xml",
  "java/res/drawable/progress_indeterminate.xml",
  "java/res/drawable/progress_indeterminate_orange.xml",
  "java/res/drawable/publisher_favicon_background.xml",
  "java/res/drawable/quick_action_search_and_bookmark_widget_background.xml",
  "java/res/drawable/quick_action_search_and_bookmark_widget_bookmark_bg.xml",
  "java/res/drawable/quick_action_search_and_bookmark_widget_search_bg.xml",
  "java/res/drawable/radio_button_holo_bg.xml",
  "java/res/drawable/radio_button_selected_bg.xml",
  "java/res/drawable/radiobutton_background.xml",
  "java/res/drawable/rating_bottomsheet_background.xml",
  "java/res/drawable/rating_news_button_background.xml",
  "java/res/drawable/recovery_phrase_bg.xml",
  "java/res/drawable/rect_round_corners_12.xml",
  "java/res/drawable/rect_up_round_corners_12.xml",
  "java/res/drawable/rewards_button_orange.xml",
  "java/res/drawable/rewards_logged_out_state_gradient_bg.xml",
  "java/res/drawable/rewards_panel_notification_date_bg.xml",
  "java/res/drawable/rewards_panel_unverified_off_bg.xml",
  "java/res/drawable/rewards_settings_gradient_bg.xml",
  "java/res/drawable/rewards_tipping_radio_button_normal.xml",
  "java/res/drawable/rewards_tipping_radio_button_selected.xml",
  "java/res/drawable/rewards_tipping_radio_button_selector.xml",
  "java/res/drawable/rounded_8_bottom_bg.xml",
  "java/res/drawable/rounded_8_top_bg.xml",
  "java/res/drawable/rounded_corners.xml",
  "java/res/drawable/rounded_dark_bg_alpha.xml",
  "java/res/drawable/rounded_dot_error_status.xml",
  "java/res/drawable/rounded_dot_success_status.xml",
  "java/res/drawable/rounded_filled.xml",
  "java/res/drawable/rounded_filled_bg_radius_12.xml",
  "java/res/drawable/rounded_holo_button.xml",
  "java/res/drawable/rounded_onboarding_welcome_bg.xml",
  "java/res/drawable/rounded_set_default_top_corners.xml",
  "java/res/drawable/rounded_shape.xml",
  "java/res/drawable/rounded_top_corners.xml",
  "java/res/drawable/rounded_wallet_edittext.xml",
  "java/res/drawable/rounded_white_holo_bg.xml",
  "java/res/drawable/selected_dot.xml",
  "java/res/drawable/selected_indicator.xml",
  "java/res/drawable/set_default_rounded_button_disabled.xml",
  "java/res/drawable/shields_tooltip_background.xml",
  "java/res/drawable/stats_bottomsheet_background.xml",
  "java/res/drawable/stats_notification_on_button_bg.xml",
  "java/res/drawable/sync_icon.xml",
  "java/res/drawable/tab_gradient_separator.xml",
  "java/res/drawable/tab_selector.xml",
  "java/res/drawable/tip_amount.xml",
  "java/res/drawable/toggle_text_color_selector.xml",
  "java/res/drawable/transparent_bg_bordered.xml",
  "java/res/drawable/twitter_button_background.xml",
  "java/res/drawable/unverified_48_rounded_bg.xml",
  "java/res/drawable/wallet_radio_button_normal.xml",
  "java/res/drawable/wallet_radio_button_selected.xml",
  "java/res/drawable/wallet_radio_button_selector.xml",
  "java/res/drawable/wallet_toolbar_panel_gradient_bg.xml",
  "java/res/drawable/wallet_top_banner_bg.xml",
  "java/res/drawable/wallet_verify_button.xml",
  "java/res/drawable/white_rounded_bg.xml",
  "java/res/drawable/white_rounded_holo_button_thin.xml",
  "java/res/drawable/yearly_selector.xml",
  "java/res/font/poppins_300.ttf",
  "java/res/font/poppins_400.ttf",
  "java/res/font/poppins_500.ttf",
  "java/res/font/poppins_600.ttf",
  "java/res/layout-land/brave_shields_stats_row.xml",
  "java/res/layout-land/verify_wallet_activity.xml",
  "java/res/layout-sw600dp-land/brave_shields_stats_row.xml",
  "java/res/layout-sw600dp/brave_rewards_site_banner.xml",
  "java/res/layout-sw600dp/brave_shields_stats_row.xml",
  "java/res/layout/account_spinner_items.xml",
  "java/res/layout/activity_account_detail.xml",
  "java/res/layout/activity_account_details_with_qr.xml",
  "java/res/layout/activity_account_private_key.xml",
  "java/res/layout/activity_account_selector.xml",
  "java/res/layout/activity_add_account.xml",
  "java/res/layout/activity_advance_tx_setting.xml",
  "java/res/layout/activity_asset_detail.xml",
  "java/res/layout/activity_brave_vpn_plan.xml",
  "java/res/layout/activity_brave_vpn_profile.xml",
  "java/res/layout/activity_brave_vpn_support.xml",
  "java/res/layout/activity_brave_wallet.xml",
  "java/res/layout/activity_brave_wallet_dapps.xml",
  "java/res/layout/activity_buy_send_swap.xml",
  "java/res/layout/activity_network_selector.xml",
  "java/res/layout/activity_nft_detail.xml",
  "java/res/layout/activity_onboarding.xml",
  "java/res/layout/activity_split_tunnel.xml",
  "java/res/layout/activity_welcome_onboarding.xml",
  "java/res/layout/application_item_layout.xml",
  "java/res/layout/approve_tx_bottom_sheet.xml",
  "java/res/layout/block_cookie_consent_notices_tooltip.xml",
  "java/res/layout/bottom_toolbar.xml",
  "java/res/layout/bottom_toolbar_browsing.xml",
  "java/res/layout/bottom_toolbar_menu_button.xml",
  "java/res/layout/bottom_toolbar_tab_switcher.xml",
  "java/res/layout/brave_ads_custom_notification.xml",
  "java/res/layout/brave_ads_custom_notification_dark.xml",
  "java/res/layout/brave_ads_existing_user_dialog_layout.xml",
  "java/res/layout/brave_ads_new_user_dialog_layout.xml",
  "java/res/layout/brave_ask_play_store_rating_dialog.xml",
  "java/res/layout/brave_bookmark_toolbar.xml",
  "java/res/layout/brave_bottom_new_tab_button.xml",
  "java/res/layout/brave_custom_tabs_toolbar.xml",
  "java/res/layout/brave_dialog_preference.xml",
  "java/res/layout/brave_news_card_menu.xml",
  "java/res/layout/brave_news_load_new_content.xml",
  "java/res/layout/brave_news_row.xml",
  "java/res/layout/brave_news_settings.xml",
  "java/res/layout/brave_news_settings_details.xml",
  "java/res/layout/brave_notification_permission_rationale_dialog.xml",
  "java/res/layout/brave_notification_warning_dialog.xml",
  "java/res/layout/brave_onboarding_searchbox.xml",
  "java/res/layout/brave_permission_prompt_dialog.xml",
  "java/res/layout/brave_rating_dialog_fragment.xml",
  "java/res/layout/brave_rating_news_layout.xml",
  "java/res/layout/brave_rating_thanks_feedback_dialog.xml",
  "java/res/layout/brave_rewards_creator_panel.xml",
  "java/res/layout/brave_rewards_custom_tip_confirmation_fragment.xml",
  "java/res/layout/brave_rewards_custom_tip_fragment.xml",
  "java/res/layout/brave_rewards_donation_sent.xml",
  "java/res/layout/brave_rewards_onboarding_ac_layout.xml",
  "java/res/layout/brave_rewards_onboarding_item_layout.xml",
  "java/res/layout/brave_rewards_onboarding_layout.xml",
  "java/res/layout/brave_rewards_onboarding_modal.xml",
  "java/res/layout/brave_rewards_panel_layout.xml",
  "java/res/layout/brave_rewards_panel_notification_layout.xml",
  "java/res/layout/brave_rewards_panel_publisher_layout.xml",
  "java/res/layout/brave_rewards_panel_settings_layout.xml",
  "java/res/layout/brave_rewards_panel_summary_layout.xml",
  "java/res/layout/brave_rewards_panel_tip_layout.xml",
  "java/res/layout/brave_rewards_panel_unverified_layout.xml",
  "java/res/layout/brave_rewards_reset_tab_content.xml",
  "java/res/layout/brave_rewards_site_banner.xml",
  "java/res/layout/brave_rewards_tip_confirmation.xml",
  "java/res/layout/brave_rewards_tip_failure_fragment.xml",
  "java/res/layout/brave_rewards_tipping_panel.xml",
  "java/res/layout/brave_set_default_browser_dialog.xml",
  "java/res/layout/brave_shields_main_layout.xml",
  "java/res/layout/brave_shields_option_layout.xml",
  "java/res/layout/brave_shields_secondary_layout.xml",
  "java/res/layout/brave_shields_stats_row.xml",
  "java/res/layout/brave_shields_switcher.xml",
  "java/res/layout/brave_shields_thank_you_layout.xml",
  "java/res/layout/brave_shields_toggle_layout.xml",
  "java/res/layout/brave_shields_tooltip_layout.xml",
  "java/res/layout/brave_stats_bottom_sheet.xml",
  "java/res/layout/brave_stats_layout.xml",
  "java/res/layout/brave_stats_notification_permission.xml",
  "java/res/layout/brave_stats_pager_layout.xml",
  "java/res/layout/brave_stats_share_layout.xml",
  "java/res/layout/brave_sync_add_laptop.xml",
  "java/res/layout/brave_sync_add_mobile.xml",
  "java/res/layout/brave_sync_device.xml",
  "java/res/layout/brave_sync_done.xml",
  "java/res/layout/brave_sync_layout.xml",
  "java/res/layout/brave_toolbar.xml",
  "java/res/layout/brave_vpn_server_selection_item_layout.xml",
  "java/res/layout/brave_vpn_server_selection_layout.xml",
  "java/res/layout/brave_wallet_accounts_list_item.xml",
  "java/res/layout/brave_wallet_add_custom_asset.xml",
  "java/res/layout/brave_wallet_add_network.xml",
  "java/res/layout/brave_wallet_autolock_layout.xml",
  "java/res/layout/brave_wallet_connected_sites_list_item.xml",
  "java/res/layout/brave_wallet_connected_sites_preference_layout.xml",
  "java/res/layout/brave_wallet_edit_gas.xml",
  "java/res/layout/brave_wallet_network_item.xml",
  "java/res/layout/brave_wallet_networks_preference_layout.xml",
  "java/res/layout/brave_wallet_panel_layout.xml",
  "java/res/layout/brave_wallet_preference_confirmation_text_layout.xml",
  "java/res/layout/brave_wallet_reset_content.xml",
  "java/res/layout/brave_wallet_toolbar.xml",
  "java/res/layout/brave_webrtc_policy_preference.xml",
  "java/res/layout/bre_bottom_banner.xml",
  "java/res/layout/connect_account_layout.xml",
  "java/res/layout/custom_layout_preference.xml",
  "java/res/layout/dapps_dialog.xml",
  "java/res/layout/dialog_aurora_bridge.xml",
  "java/res/layout/edit_visible_assets_bottom_sheet.xml",
  "java/res/layout/fragment_accounts.xml",
  "java/res/layout/fragment_ad_free_callout_dialog.xml",
  "java/res/layout/fragment_add_switch_ethereum_chain.xml",
  "java/res/layout/fragment_add_token.xml",
  "java/res/layout/fragment_backup_wallet.xml",
  "java/res/layout/fragment_brave_ads_onboarding.xml",
  "java/res/layout/fragment_brave_location_bar_qr_dialog.xml",
  "java/res/layout/fragment_brave_rewards_onboarding.xml",
  "java/res/layout/fragment_brave_vpn_always_on_error_dialog.xml",
  "java/res/layout/fragment_brave_vpn_confirm_dialog.xml",
  "java/res/layout/fragment_brave_vpn_plan.xml",
  "java/res/layout/fragment_connect_account.xml",
  "java/res/layout/fragment_create_account.xml",
  "java/res/layout/fragment_create_account.xml",
  "java/res/layout/fragment_cross_promotional_modal_dialog.xml",
  "java/res/layout/fragment_crypto_wallet_onboarding.xml",
  "java/res/layout/fragment_dapps_message.xml",
  "java/res/layout/fragment_dormant_users_engagement_dialog.xml",
  "java/res/layout/fragment_encryption_key.xml",
  "java/res/layout/fragment_link_subscription_dialog.xml",
  "java/res/layout/fragment_onboarding_v2.xml",
  "java/res/layout/fragment_portfolio.xml",
  "java/res/layout/fragment_qr_code_share.xml",
  "java/res/layout/fragment_recovery_phrase.xml",
  "java/res/layout/fragment_restore_wallet.xml",
  "java/res/layout/fragment_search_engine_onboarding.xml",
  "java/res/layout/fragment_secure_password.xml",
  "java/res/layout/fragment_set_default_browser_bottom_sheet.xml",
  "java/res/layout/fragment_setup_wallet.xml",
  "java/res/layout/fragment_sign_message.xml",
  "java/res/layout/fragment_sign_tx_message.xml",
  "java/res/layout/fragment_transaction.xml",
  "java/res/layout/fragment_transaction_details.xml",
  "java/res/layout/fragment_troubleshooting_onboarding.xml",
  "java/res/layout/fragment_two_line_item_list.xml",
  "java/res/layout/fragment_unlock_wallet.xml",
  "java/res/layout/fragment_verify_recovery_phrase.xml",
  "java/res/layout/fragment_vpn_callout_dialog.xml",
  "java/res/layout/highlight_layout.xml",
  "java/res/layout/icon_row_menu_footer.xml",
  "java/res/layout/item_create_account.xml",
  "java/res/layout/item_fragment_two_line_divider_item.xml",
  "java/res/layout/item_fragment_two_line_item.xml",
  "java/res/layout/item_network_selector.xml",
  "java/res/layout/item_news_settings.xml",
  "java/res/layout/item_news_settings_section.xml",
  "java/res/layout/layout_search_widget_promo.xml",
  "java/res/layout/location_status_incognito_badge.xml",
  "java/res/layout/menu_separator.xml",
  "java/res/layout/network_spinner_items.xml",
  "java/res/layout/new_tab_page_incognito.xml",
  "java/res/layout/new_tab_page_layout.xml",
  "java/res/layout/news_loading.xml",
  "java/res/layout/ntp_bottom_sheet.xml",
  "java/res/layout/ntp_image_credit.xml",
  "java/res/layout/ntp_non_disruptive_banner.xml",
  "java/res/layout/optin_layout.xml",
  "java/res/layout/pref_edittext_dialog.xml",
  "java/res/layout/qa_code_check.xml",
  "java/res/layout/qa_command_line.xml",
  "java/res/layout/quick_action_search_and_bookmark_widget_layout.xml",
  "java/res/layout/radio_button_group_ddns_resolve_method_preference.xml",
  "java/res/layout/recovery_phrase_item_layout.xml",
  "java/res/layout/report_broken_site_layout.xml",
  "java/res/layout/rewards_panel_vbat_expire_notice.xml",
  "java/res/layout/rewards_response_modal.xml",
  "java/res/layout/search_preference.xml",
  "java/res/layout/swap_bottom_sheet.xml",
  "java/res/layout/toolbar_space.xml",
  "java/res/layout/tracker_item_layout.xml",
  "java/res/layout/user_wallet_activity.xml",
  "java/res/layout/verify_wallet_activity.xml",
  "java/res/layout/vpn_settings_callout_modal_layout.xml",
  "java/res/layout/wallet_backup_banner.xml",
  "java/res/layout/wallet_balance_layout.xml",
  "java/res/layout/wallet_coin_list_item.xml",
  "java/res/layout/web_notification_icon_frame_brave.xml",
  "java/res/menu/bookmark_tab_menu.xml",
  "java/res/menu/exit_settings_menu.xml",
  "java/res/menu/menu_account_selector.xml",
  "java/res/menu/menu_brave_news_settings_search.xml",
  "java/res/menu/menu_brave_vpn.xml",
  "java/res/menu/menu_dapps_panel.xml",
  "java/res/menu/menu_network_selector.xml",
  "java/res/menu/monthly_contribution_popup_menu.xml",
  "java/res/menu/new_tab_menu.xml",
  "java/res/menu/split_tunnel_menu.xml",
  "java/res/menu/wallet_search.xml",
  "java/res/values-h380dp/dimens.xml",
  "java/res/values-h500dp/dimens.xml",
  "java/res/values-h568dp/dimens.xml",
  "java/res/values-h730dp/dimens.xml",
  "java/res/values-h748dp/dimens.xml",
  "java/res/values-h765dp/dimens.xml",
  "java/res/values-h820dp/dimens.xml",
  "java/res/values-night/brave_colors.xml",
  "java/res/values-night/brave_styles.xml",
  "java/res/values-sw600dp/brave_dimens.xml",
  "java/res/values-v21/brave_styles.xml",
  "java/res/values/array.xml",
  "java/res/values/brave_attrs.xml",
  "java/res/values/brave_colors.xml",
  "java/res/values/brave_dimens.xml",
  "java/res/values/brave_ids.xml",
  "java/res/values/brave_styles.xml",
  "java/res/xml/appearance_preferences.xml",
  "java/res/xml/background_images_preferences.xml",
  "java/res/xml/brave_download_preferences.xml",
  "java/res/xml/brave_ethereum_preferences.xml",
  "java/res/xml/brave_license_preferences.xml",
  "java/res/xml/brave_main_preferences.xml",
  "java/res/xml/brave_news_preferences.xml",
  "java/res/xml/brave_news_sources_default.xml",
  "java/res/xml/brave_privacy_preferences.xml",
  "java/res/xml/brave_rewards_debug_preferences.xml",
  "java/res/xml/brave_rewards_preferences.xml",
  "java/res/xml/brave_search_engines_preferences.xml",
  "java/res/xml/brave_solana_preferences.xml",
  "java/res/xml/brave_stats_preferences.xml",
  "java/res/xml/brave_theme_preferences.xml",
  "java/res/xml/brave_vpn_preferences.xml",
  "java/res/xml/brave_wallet_networks_preference.xml",
  "java/res/xml/brave_wallet_preferences.xml",
  "java/res/xml/brave_webrtc_policy_preferences.xml",
  "java/res/xml/developer_preferences.xml",
  "java/res/xml/ens_preferences.xml",
  "java/res/xml/legal_information_preferences.xml",
  "java/res/xml/play_yt_video_in_browser_preferences.xml",
  "java/res/xml/qa_preferences.xml",
  "java/res/xml/quick_action_search_and_bookmark_widget_info.xml",
  "java/res/xml/sns_preferences.xml",
  "java/res/xml/unstoppable_domains_preferences.xml",
  "java/res/xml/use_custom_tabs_brave_preference.xml",
]

brave_base_module_resources =
    [ "java/res_chromium_base/drawable-night/themed_app_icon.xml" ]

# XML preprocessing
brave_java_preprocess_xml_sources =
    [ "//chrome/android/java/res/menu/main_menu.xml" ]
brave_java_preprocess_module_sources =
    [ "//brave/android/preprocess/xml/menu_main_menu_xml.py" ]
